<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="16dp"
        android:gravity="center_vertical|end"
        android:text="@string/_0"
        android:background="#ddd"
        android:textSize="32sp"
        android:id="@+id/display"
        android:singleLine="true"
        android:ellipsize="none"
        android:maxLength="11"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/vertical"
        android:layout_below="@+id/display">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/row0">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_7"
                android:onClick="numberButtonClick"
                android:id="@+id/button7" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_8"
                android:onClick="numberButtonClick"
                android:id="@+id/button8" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_9"
                android:onClick="numberButtonClick"
                android:id="@+id/button9" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/d"
                android:onClick="operationButtonClick"
                android:id="@+id/divide" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/row1" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_4"
                android:onClick="numberButtonClick"
                android:id="@+id/button4" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_5"
                android:onClick="numberButtonClick"
                android:id="@+id/button5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_6"
                android:onClick="numberButtonClick"
                android:id="@+id/button6" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mul"
                android:onClick="operationButtonClick"
                android:id="@+id/multiply" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/row2" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3"
                android:onClick="numberButtonClick"
                android:id="@+id/button3" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_2"
                android:onClick="numberButtonClick"
                android:id="@+id/button2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1"
                android:onClick="numberButtonClick"
                android:id="@+id/button1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/m"
                android:onClick="operationButtonClick"
                android:id="@+id/subtract" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/row3" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_0"
                android:onClick="numberButtonClick"
                android:id="@+id/button0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dot"
                android:onClick="numberButtonClick"
                android:id="@+id/decimal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/e"
                android:onClick="equalButtonClick"
                android:id="@+id/equals" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/p"
                android:onClick="operationButtonClick"
                android:id="@+id/add" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>